2006.07.24

* Created a UFTFile object for mangaing the codecs files.
* Created Letter, Vowel, Consonant, and Word objects to assist in generalizing
the code in LangGen.py.
* Cleaned up (removed) the code that depended on the old way of determining
vowels and consonants.
* Added corpra files for oldenglish and sanskrit.

2006.07.17

* Added new vowel, consonant, and alphabet sources.
* Added support for unicode/UTF-8.
* Removed pickle usage from LangGen due to its lack of support for unicode.
* Added scripts for generating an alphabet from source text.
* Added a word-gen script.
* Generated clean source text file for Old Norse from raw source.
* Generated stats file for Old Norse.
* Introduced a quick and dirty and horribly inefficient kludge for building
word lists that start with a given string. This needs to be done right in the
near future.
* Added TODO file.

2006.07.11

* Added Old English and Old Norse source text.

2006.06.06

* Moved corpora out of lib and into its own space.
* Created corpora/wordlists, corpora/sources, and corpora/stats.
* Added admin directory with a couple scripts.
* Moved wordlists into their own directory.
* Removed the extraneous "_wordlist" on the wordlist text files.
* Added sources and stats.
* Moved a hijacked python file from corpora back into lib.
* Renamed the "linguistics" package to "ling".

2004.12.31

* Experimented with NLTK to, figuring out how to perform the old PyWordGen
tasks within an academic framework such as NLTK.

2004.12.27

* Added a setup.py file for distutils install.
* Added custom corpora.

2004.12.26

* Created new space for linguistic libs.

2004.10.14

* Migrated to subversion.
* Fixed over-written data on the web server.

2003.11.21

* Added website to the repository.
* Updated notes for install.
* Initial import into sf.net CVS. 